<resources>
    <string name="app_name" translatable="false">WikiWeeb</string>
    <string name="usuario">usuario</string>
    <string name="contrasena">contraseña</string>
    <string name="tieUserName">usuario</string>
    <string name="tiePassowor">contraseña</string>
    <string name="cbReadMe">recuarda me</string>
    <string name="tvNotcuesta">no tengo cuenta</string>
    <string name="bttGoogle">Google</string>
    <string name="bttFacebook">Facebook</string>
    <string name="bllLogin">entrar</string>
    <string name="tvLogin">Iniciar sesión</string>
    <string name="tvSingUp">Regístrate</string>
    <string name="tietUser">usuario</string>
    <string name="tietEmail">correo</string>
    <string name="tietPassword">contraseña</string>
    <string name="tietRepiterPassword">repetir contraseña</string>
    <string name="bttSingUp">registrase</string>
    <string name="bttAddReview">añadir reseña</string>
    <string name="bttAddArticle">añadir articulo</string>
    <string name="bttAbout">acerca de</string>
    <string name="tvAddArticle">Añadrir Articulo</string>
    <string name="tieTitle">Titulo</string>
    <string name="tieQuantity">cantidad</string>
    <string name="tieSynopsis">Sinopsis</string>
    <string name="tieReview">Review</string>
    <string name="tvCreator">Creador: acasema (Alfonso Serrano)</string>
    <string name="tvAppName">Nombre de la aplicacion: WikiWeeb</string>
    <string name="tvVersion">Version de la app: 0.1</string>
    <string name="tvGuestAccess">acceso como invitado</string>
    <string name="bttViewUser">Ver mi usuario</string>
    <string name="tvCategory">categoria: </string>
    <string name="tvquantity">cantidad: </string>
    <string name="tvSynopsis">sinopsis: </string>
    <string name="tvLogoDesigner">Diseñador del logo y consultor de diseño: juan carlos calvo</string>
    <string name="tvReview">Review: </string>
    <string name="tvScore">Puntuacion: </string>
    <string name="create">crear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nodata">no hay datos</string>
    <string name="tvLoading">cargando datos</string>
    <string name="bttListArticho">listado de articulo</string>
    <string name="sortByName">ordenar por nombre</string>
</resources>