<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bttAddArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bttAddArticle"
        app:layout_constraintBottom_toTopOf="@+id/bttAddReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/bttAddReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bttAddReview"
        app:layout_constraintBottom_toTopOf="@+id/bttAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttAddArticle" />

    <Button
        android:id="@+id/bttAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bttAbout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bttViewUser"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttAddReview" />

    <Button
        android:id="@+id/bttViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/bttViewUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bttAbout"
        app:layout_constraintTop_toTopOf="@+id/bttAbout" />


</androidx.constraintlayout.widget.ConstraintLayout>
