<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".iu.article.view.ViewArticleFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="novela de overlod"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/glR"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/glL"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvCategory"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tvQuantity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/glL"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvquantity"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/glR"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCategory"
        app:layout_constraintTop_toTopOf="@+id/tvCategory" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvSynopsis"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/glL"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glR"
        app:layout_constraintStart_toStartOf="@+id/glL"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/tvSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam facilisis mi est, sit amet scelerisque tortor placerat sit amet. Proin in est sit amet leo laoreet pharetra vestibulum vitae risus. Praesent rutrum lorem vel sapien vulputate dignissim. Vivamus rutrum lacus ultricies, elementum urna pharetra, vehicula ipsum. Pellentesque fringilla nibh sit amet nulla interdum suscipit. Duis in mi aliquam, volutpat ligula a, dictum sem. Donec vitae massa laoreet, tincidunt est efficitur, dictum diam. Aliquam non massa porta, facilisis neque ullamcorper, rutrum felis. Fusce purus nibh, semper a eleifend quis, iaculis a sem. Morbi at diam iaculis tellus ornare sodales sit amet eget sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam egestas finibus consequat. Suspendisse ultricies urna ipsum, non blandit nibh auctor nec. Phasellus finibus ipsum ac velit posuere, et mollis arcu vestibulum."
            android:textSize="18sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>